fixed collapse/expand button height issue

--- a/css/spyro.css
+++ b/css/spyro.css
@@ -395,7 +395,9 @@ body{
     cursor: pointer;
     margin: 0px;
 
-    top:-23px;
+    top:-21px;
+    height:100%;
+    padding:0px;
     position:relative;
     /*margin-left:30px;*/
     /*margin-right:30px;*/
